--- a/railway.mcp.toml
+++ b/railway.mcp.toml
@@ -6,6 +6,7 @@ builder = "dockerfile"
 dockerfilePath = "backend/Dockerfile.gateway"
 
 [deploy]
+startCommand = "./start_gateway.sh"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
