--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,7 +34,11 @@ COPY src/ ./src/
 RUN echo "Verifying new code with occasion-first filter..." && \
     grep -q "STEP 1: Occasion-First Filtering" ./src/services/robust_outfit_generation_service.py && \
     echo "✅ New code verified: Occasion-first filter present" || \
-    (echo "❌ Old code detected: Occasion-first filter MISSING - build failed!" && exit 1)
+    (echo "❌ Old code detected: Occasion-first filter MISSING - build failed!" && exit 1) && \
+    echo "Verifying weather analyzer fix..." && \
+    grep -q "float.*temperature.*CRITICAL" ./src/services/robust_outfit_generation_service.py && \
+    echo "✅ Weather analyzer fix verified" || \
+    (echo "❌ Weather analyzer fix MISSING - build failed!" && exit 1)
 
 # Expose port (Railway will override with its own PORT)
 EXPOSE 8080
