--- a/backend/env.example
+++ b/backend/env.example
@@ -1,7 +1,7 @@
 # Application Settings
 ENVIRONMENT=production
 DEBUG=false
-APP_NAME=ClosetGPT
+APP_NAME=Easy Outfit App
 APP_VERSION=1.0.0
 
 # Server Settings
