--- a/railway.worker.toml
+++ b/railway.worker.toml
@@ -6,7 +6,7 @@ builder = "dockerfile"
 dockerfilePath = "backend/Dockerfile.worker"
 
 [deploy]
-startCommand = "cd backend/worker && python main.py"
+# Dockerfile handles the CMD, but we can override if needed
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
