--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -47,6 +47,7 @@ packaging==25.0
 Pillow==10.0.1
 psutil==6.1.0
 pillow-heif==0.13.0
+pillow-avif-plugin==1.4.3
 platformdirs==4.4.0
 pooch==1.8.2
 proto-plus==1.26.1
