Fix Dockerfile - use backend/ prefix for build context from project root

--- a/backend/Dockerfile.gateway
+++ b/backend/Dockerfile.gateway
@@ -1,15 +1,16 @@
 # Lightweight Dockerfile for HTTP Gateway
+# Build context: project root (Railway builds from repo root)
 FROM python:3.11-slim
 
 WORKDIR /app
 
 # Copy requirements and install
-COPY requirements-gateway.txt .
+COPY backend/requirements-gateway.txt .
 RUN pip install --no-cache-dir -r requirements-gateway.txt
 
 # Copy gateway file and start script
-COPY mcp_http_gateway.py .
-COPY start_gateway.sh .
+COPY backend/mcp_http_gateway.py .
+COPY backend/start_gateway.sh .
 RUN chmod +x start_gateway.sh
 
 # Expose port (Railway uses $PORT env var)
