--- a/backend/requirements-gateway.txt
+++ b/backend/requirements-gateway.txt
@@ -1,5 +1,7 @@
+# Gateway dependencies for OpenAI Apps SDK
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
 httpx>=0.28.0
 python-multipart>=0.0.9
+firebase-admin>=6.0.0
 
