feat: Mobile UX improvements and comprehensive Cypress testing suite
- Fix mobile menu functionality with React Portal and proper z-index layering
- Implement WCAG AAA 44x44px touch targets across all interactive elements
- Add iOS zoom prevention (16px minimum font size for inputs)
- Create comprehensive Cypress E2E test suite for mobile UX standards
- Update button component sizes (sm, default, icon) to meet accessibility standards
- Fix password toggle buttons on signin/signup pages
- Improve dashboard quick action buttons for mobile
- Add mobile-first Cypress configuration with viewport presets
- Implement body scroll lock when mobile menu is open
- Add extensive mobile testing documentation and guides

All mobile menu fixes, touch target improvements, and test infrastructure are included.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:e2e": "cypress run",
+    "test:e2e:mobile": "cypress run --spec 'cypress/e2e/mobile/**/*.cy.ts'",
+    "test:e2e:mobile:open": "cypress open --config specPattern='cypress/e2e/mobile/**/*.cy.ts'",
+    "test:e2e:comprehensive": "cypress run --spec 'cypress/e2e/comprehensive-mobile-fixes.cy.ts'",
+    "test:e2e:all-fixes": "cypress run --spec 'cypress/e2e/comprehensive-mobile-fixes.cy.ts' --spec 'cypress/e2e/mobile/**/*.cy.ts'",
     "migrate:metadata": "ts-node -r tsconfig-paths/register src/scripts/runMetadataMigration.ts",
     "analyze": "npm run build:analyze && open bundle-analyzer-report.html"
   },
