Fix background-processor: Remove railway.json conflict, enhance railway.toml with watchPatterns

--- a/backend/worker/railway.toml
+++ b/backend/worker/railway.toml
@@ -1,8 +1,10 @@
 # Railway configuration for background-processor worker service
 # This service uses NIXPACKS builder (not Dockerfile)
+# Root directory: backend/worker
 
 [build]
 builder = "NIXPACKS"
+watchPatterns = ["backend/worker/**"]
 
 [deploy]
 startCommand = "python main.py"
