--- a/backend/worker/railway.toml
+++ b/backend/worker/railway.toml
@@ -1,13 +1,16 @@
 # Railway configuration for background-processor worker service
 # This service uses NIXPACKS builder (not Dockerfile)
-# Root directory: backend/worker
+# 
+# IMPORTANT: In Railway dashboard, set:
+# - Root Directory: backend/
+# - Start Command: python worker/main.py
+# This allows the worker to access backend/src/ for imports
 
 [build]
 builder = "NIXPACKS"
-watchPatterns = ["backend/worker/**"]
 
 [deploy]
-startCommand = "python main.py"
+startCommand = "python worker/main.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
