Update worker Dockerfile: Attempt to include backend/src/ for imports
- Try to COPY ../src if available in build context
- Create symlink if src exists in parent directory
- Falls back to sys.path manipulation if src/ not available
- Ensures imports work whether src/ is copied or not

--- a/backend/worker/Dockerfile
+++ b/backend/worker/Dockerfile
@@ -10,9 +10,19 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Copy worker code
 COPY . .
 
+# Try to copy backend/src/ if it exists in the build context
+# Railway's build context when root is backend/worker might include parent dirs
+# If this fails, the sys.path manipulation in main.py will handle it
+COPY ../src ./src 2>/dev/null || echo "Note: src/ not in build context, will use sys.path fix"
+
+# Alternative: Create symlink if src exists in parent (for Railway's file structure)
+# This handles cases where Railway includes parent directories in the container
+RUN if [ -d "../src" ]; then \
+        ln -sf ../src ./src || true; \
+    fi
+
 # The sys.path manipulation in main.py will handle finding backend/src/
-# at runtime. Railway's build context may include parent directories,
-# or the worker will use the fallback paths we coded.
+# at runtime using multiple fallback paths if src/ isn't directly available.
 
 # Run the worker
 CMD ["python", "main.py"]
