--- a/backend/worker/Dockerfile
+++ b/backend/worker/Dockerfile
@@ -10,19 +10,10 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Copy worker code
 COPY . .
 
-# Try to copy backend/src/ if it exists in the build context
-# Railway's build context when root is backend/worker might include parent dirs
-# If this fails, the sys.path manipulation in main.py will handle it
-COPY ../src ./src 2>/dev/null || echo "Note: src/ not in build context, will use sys.path fix"
-
-# Alternative: Create symlink if src exists in parent (for Railway's file structure)
-# This handles cases where Railway includes parent directories in the container
-RUN if [ -d "../src" ]; then \
-        ln -sf ../src ./src || true; \
-    fi
-
-# The sys.path manipulation in main.py will handle finding backend/src/
-# at runtime using multiple fallback paths if src/ isn't directly available.
+# Note: Docker cannot COPY from parent directories when build context is backend/worker
+# The sys.path manipulation in main.py will handle finding backend/src/ at runtime
+# If Railway's build context includes parent directories, the worker will find src/ via sys.path
+# If not, the fallback paths in main.py will attempt alternative locations
 
 # Run the worker
 CMD ["python", "main.py"]
