--- a/backend/worker/railway.toml
+++ b/backend/worker/railway.toml
@@ -1,16 +1,14 @@
 # Railway configuration for background-processor worker service
-# This service uses NIXPACKS builder (not Dockerfile)
-# 
-# IMPORTANT: In Railway dashboard, set:
-# - Root Directory: backend/
-# - Start Command: python worker/main.py
-# This allows the worker to access backend/src/ for imports
+# This service uses Dockerfile builder
+# Root Directory is set to: backend/worker
+# Dockerfile path should be: Dockerfile (relative to root directory)
 
 [build]
-builder = "NIXPACKS"
+builder = "dockerfile"
+dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "python worker/main.py"
+startCommand = "python main.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
