Switch worker service to NIXPACKS builder
- Change from Dockerfile to NIXPACKS builder
- Dockerfile build context restriction prevents accessing backend/src/
- NIXPACKS allows sys.path manipulation to find ../src at runtime
- Disable Dockerfile (rename to .disabled) so Railway uses NIXPACKS
- Root directory stays backend/worker, start command stays python main.py
- sys.path fix in main.py will resolve backend/src/ imports

--- a/backend/worker/railway.toml
+++ b/backend/worker/railway.toml
@@ -1,11 +1,13 @@
 # Railway configuration for background-processor worker service
-# This service uses Dockerfile builder
-# Root Directory is set to: backend/worker
-# Dockerfile path should be: Dockerfile (relative to root directory)
+# This service uses NIXPACKS builder (not Dockerfile)
+# Root Directory: backend/worker (cannot be changed)
+# Start Command: python main.py
+# 
+# NIXPACKS allows sys.path to resolve ../src at runtime, unlike Dockerfile
+# which restricts build context to backend/worker only.
 
 [build]
-builder = "dockerfile"
-dockerfilePath = "Dockerfile"
+builder = "NIXPACKS"
 
 [deploy]
 startCommand = "python main.py"
