--- a/railway.worker.toml
+++ b/railway.worker.toml
@@ -1,12 +1,14 @@
-# Railway configuration for the Background Worker service
+# Railway configuration for the Background Worker service (background-processor)
 # This service processes wardrobe images and flatlays in the background
+# Root Directory: backend/worker (set in Railway dashboard)
+# 
+# Uses NIXPACKS builder (not Dockerfile) to allow sys.path to resolve ../src at runtime
 
 [build]
-builder = "dockerfile"
-dockerfilePath = "backend/Dockerfile.worker"
+builder = "NIXPACKS"
 
 [deploy]
-# Dockerfile handles the CMD, but we can override if needed
+startCommand = "python main.py"
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 3
+restartPolicyMaxRetries = 10
 
